# nico-thru-line-festival

./: Procfile  README.md  nico-thru-line-festival.cabal  stack.yaml
src/: Answers.hs  App.hs  Core.hs  ExerciseList.hs  InitUsers.hs  Main.hs  MyLib.hs  Search.hs  Thumbs.db
src/MyLib/: Coursework.hs
